---------------------------------------------------------------------------------------------------
Version: 0.69.131
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.130
Date: 2026-01-07
  Changes:
    - Cargo bay inserter blacklist robustness. If will now only blacklist Rubia if planet cargo bays allow automated item insertion.
---------------------------------------------------------------------------------------------------
Version: 0.69.129
Date: 2025-12-14
  Changes:
    - Actually futureproofed for Lignumis + Wooden Logistics (not wooden universe) at the same time.
---------------------------------------------------------------------------------------------------
Version: 0.69.128
Date: 2025-12-14
  Changes:
    - Futureproofed compat with Lignumis + Wooden Universe at the same time.
---------------------------------------------------------------------------------------------------
Version: 0.69.127
Date: 2025-11-30
  Changes:
    - Fixed reversing speed for armored locomotives. Due to a mathermatical error, they reversed much slower than intended (during manual drive). Thanks to woolworm2's report.
    - Eyedropper tech now gives a tiny bit of additional reach as a small bonus. So people with zoom-altering mods don't get absolutely nothing.
    - Rubia mod name in library now just says ○🌐Rubia
    - Forcing people to up versions of their dependencies for various upgrades, as I need some upgrades, and I'm not going to handle bug reports/testing on older versions of dependencies.
    - Cheat mode no longer causes a bunch of unknown tech placeholders to stay visible.
    - Fixed incompatibility with Alloy smelting when specific mod settings are enabled.
    - Fixed incompatibility with crushing industry making concrete not work in crapapult.
---------------------------------------------------------------------------------------------------
Version: 0.69.126
Date: 2025-11-14